# sk

./: .gitignore  HANDOFF.md  pyproject.toml  setup_and_smoke.sh
configs/: experiment.yaml  preregistration.yaml
scripts/: analyze.py  analyze_results.py  run_baseline.py  run_experiment.py  run_perturbations.py  select_queries.py
src/: agent_runner.py  analyze.py  gos_interface.py  perturbations.py  variance.py
